--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#607d8b</color>
+    <color name="colorPrimaryDark">#455a64</color>
+    <color name="colorAccent">#b71c1c</color>
+
+    <color name="materialRed">#b71c1c</color>
+    <color name="materialPink">#ff4081</color>
+    <color name="materialOrange">#ff5722</color>
+    <color name="materialBlue">#0d47a1</color>
+    <color name="materialYellow">#ffd600</color>
+    <color name="materialGreen">#5db61e</color>
+    <color name="materialPurple">#9c27b0</color>
+    <color name="materialCyan">#00bfa5</color>
 </resources>
