--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,89 +8,142 @@
     tools:context="com.example.user.zzzmitview.MainActivity">
 
 
-    <TextView
-        android:id="@+id/ueberschrift"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Zick Zack Ziege"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"/>
 
-    <Button
-        android:id="@+id/einzelspieler"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/ueberschrift"
-        android:layout_marginTop="31dp"
-        android:text="Einzelspieler"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button"
-        android:textColorLink="@android:color/holo_blue_dark" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
 
-    <Button
-        android:id="@+id/einsGegenEins"
-        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/einzelspieler"
-        android:text="1 gegen 1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/mehrspieler"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/einsGegenEins"
-        android:text="Mehrspieler"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+            <android.support.v7.widget.CardView
+                android:id="@+id/spielmodus"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                app:cardElevation="4dp"
+                app:contentPadding="5dp">
 
-    <Button
-        android:id="@+id/online"
-        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/mehrspieler"
-        android:text="Online"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/regeln"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/online"
-        android:text="Regeln"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+                    <Button
+                        android:id="@+id/einzelspieler"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Einzelspieler"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp"
+                        />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/regeln"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+                    <Button
+                        android:id="@+id/einsGegenEins"
+                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="1 gegen 1"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp"
+                        />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
-        android:text="Button" />
+                    <Button
+                        android:id="@+id/mehrspieler"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="Mehrspieler"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp"
+                        />
+
+                    <Button
+                        android:id="@+id/online"
+                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="Online"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp"
+                        />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/einstellungen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                app:cardElevation="4dp"
+                app:contentPadding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/regeln"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Regeln"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textSize="18sp"
+                        />
+
+                    <EditText
+                        android:id="@+id/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="4dp"
+                        android:ems="10"
+                        android:inputType="textPersonName"
+                        android:text="Name"/>
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Speichern"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+
+    </ScrollView>
+
 </RelativeLayout>
