--- a/App/app/src/main/res/layout/einsgegeneinsauswaehlen.xml
+++ b/App/app/src/main/res/layout/einsgegeneinsauswaehlen.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="55dp"
         android:layout_marginStart="55dp"
         android:layout_marginTop="215dp"
-        app:srcCompat="@drawable/x"
+        app:srcCompat="@mipmap/x"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
