--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"/>
+        android:theme="?attr/actionBarTheme"
+        app:title="ZickZackZiege"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,6 +30,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:srcCompat="@mipmap/ziege_transparent"/>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/spielmodus"
@@ -52,8 +60,7 @@
                         android:text="Einzelspieler"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColorLink="@android:color/holo_blue_dark"
-                        android:textSize="18sp"
-                        />
+                        android:textSize="18sp"/>
 
                     <Button
                         android:id="@+id/einsGegenEins"
@@ -64,8 +71,7 @@
                         android:text="1 gegen 1"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColorLink="@android:color/holo_blue_dark"
-                        android:textSize="18sp"
-                        />
+                        android:textSize="18sp"/>
 
                     <Button
                         android:id="@+id/mehrspieler"
@@ -76,8 +82,7 @@
                         android:text="Mehrspieler"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColorLink="@android:color/holo_blue_dark"
-                        android:textSize="18sp"
-                        />
+                        android:textSize="18sp"/>
 
                     <Button
                         android:id="@+id/online"
@@ -88,8 +93,7 @@
                         android:text="Online"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColorLink="@android:color/holo_blue_dark"
-                        android:textSize="18sp"
-                        />
+                        android:textSize="18sp"/>
 
                 </LinearLayout>
 
@@ -99,6 +103,7 @@
                 android:id="@+id/einstellungen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 app:cardElevation="4dp"
                 app:contentPadding="5dp">
@@ -116,27 +121,19 @@
                         android:layout_height="wrap_content"
                         android:text="Regeln"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
-                        android:textSize="18sp"
-                        />
-
-                    <EditText
-                        android:id="@+id/editText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="4dp"
-                        android:ems="10"
-                        android:inputType="textPersonName"
-                        android:text="Name"/>
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp"/>
 
                     <Button
-                        android:id="@+id/button"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/name"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Speichern"/>
+                        android:layout_marginTop="4dp"
+                        android:text="Namen ändern"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp"/>
 
                 </LinearLayout>
 
