--- a/App/app/src/main/res/values/styles.xml
+++ b/App/app/src/main/res/values/styles.xml
@@ -1,7 +1,5 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar"/>
 
 </resources>
