Punktestand wird aktualisiert

--- a/App/app/src/main/res/layout/activity_spielfeld_multiplayer.xml
+++ b/App/app/src/main/res/layout/activity_spielfeld_multiplayer.xml
@@ -13,14 +13,31 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"/>
+        android:theme="?attr/actionBarTheme" />
 
-    <view
-        class="com.example.user.zzzmitview.MultiplayerView"
+    <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar"/>
+        android:layout_below="@+id/toolbar"
+        android:orientation="vertical">
+
+        <view
+            android:id="@+id/view"
+            class="com.example.user.zzzmitview.MultiplayerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5" />
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:minHeight="10dp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
