--- a/App/app/src/main/res/layout/activity_spielfeld_singleplayer.xml
+++ b/App/app/src/main/res/layout/activity_spielfeld_singleplayer.xml
@@ -16,11 +16,12 @@
         android:theme="?attr/actionBarTheme"/>
 
     <view
+        android:id="@+id/view"
         class="com.example.user.zzzmitview.SingleplayerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar"/>
+        android:layout_below="@+id/toolbar" />
 
 </RelativeLayout>
