--- a/App/app/src/main/res/layout/activity_spielfeld_multiplayer.xml
+++ b/App/app/src/main/res/layout/activity_spielfeld_multiplayer.xml
@@ -26,7 +26,7 @@
 
         <view
             android:id="@+id/view"
-            class="com.example.user.zzzmitview.MultiplayerView"
+            class="com.example.user.zzzmitview.view.MultiplayerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5" />
