--- a/App/app/src/main/res/layout/activity_spielfeld_multiplayer.xml
+++ b/App/app/src/main/res/layout/activity_spielfeld_multiplayer.xml
@@ -1,43 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"/>
 
-    <LinearLayout
-        android:id="@+id/layout"
+    <view
+        android:id="@+id/view"
+        class="com.example.user.zzzmitview.view.MultiplayerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar"
-        android:orientation="vertical">
+        android:minHeight="10dp"/>
 
-        <view
-            android:id="@+id/view"
-            class="com.example.user.zzzmitview.view.MultiplayerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5" />
-
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:minHeight="10dp" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
