--- a/App/app/src/main/res/layout/dialog_client.xml
+++ b/App/app/src/main/res/layout/dialog_client.xml
@@ -2,21 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="end"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignLeft="@+id/editText"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_alignStart="@+id/editText"
         android:layout_marginTop="10dp"
-        android:text="Lokaler Mehrspieler"
+        android:text="Netzwerkspiel betreten"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"/>
 
@@ -27,8 +23,8 @@
         android:layout_below="@id/titel"
         android:layout_margin="10dp"
         android:ems="10"
-        android:hint="Spieleranzahl"
-        android:inputType="number" />
+        android:hint="IP-Adresse"
+        android:inputType="textPersonName"/>
 
     <Button
         android:id="@+id/ok"
@@ -38,6 +34,6 @@
         android:layout_alignEnd="@+id/editText"
         android:layout_alignRight="@+id/editText"
         android:layout_below="@+id/editText"
-        android:text="Starten"/>
+        android:text="Betreten"/>
 
 </RelativeLayout>
