--- a/App/app/src/main/res/layout/dialog_nickname.xml
+++ b/App/app/src/main/res/layout/dialog_nickname.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -24,7 +24,7 @@
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
+        android:layout_below="@id/titel"
         android:layout_margin="10dp"
         android:ems="10"
         android:hint="Nickname"
