--- a/App/app/src/main/res/layout/list_item_spieler.xml
+++ b/App/app/src/main/res/layout/list_item_spieler.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/punkte"
         android:layout_toStartOf="@+id/punkte"
-        android:text="TextView"
+        android:text="Spieler"
         android:textSize="24sp"
         android:textStyle="bold"/>
 
@@ -25,7 +25,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:gravity="end"
-        android:text="TextView"
+        android:text="Punkte"
         android:textAlignment="viewEnd"
         android:textSize="24sp"/>
 
