--- a/App/app/src/main/res/layout/dialog_netzwerk.xml
+++ b/App/app/src/main/res/layout/dialog_netzwerk.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_margin="5dp">
 
     <Button
         android:id="@+id/betreten"
@@ -21,10 +20,13 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/betreten"
+        android:layout_marginTop="10dp"
         android:text="Netzwerkspiel erstellen"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="18sp"/>
 
-</LinearLayout>
+</RelativeLayout>
