--- a/App/app/src/main/res/layout/dialog_server.xml
+++ b/App/app/src/main/res/layout/dialog_server.xml
@@ -6,21 +6,39 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
+    <TextView
+        android:id="@+id/titel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Netzwerk-Mehrspieler"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"/>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/ipAdresse"
+        android:layout_below="@id/titel"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        tools:listitem="@layout/list_item_spieler"/>
+
+    <TextView
+        android:id="@+id/ipAdresse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/start"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="10dp"
-        tools:listitem="@layout/list_item_spieler">
-
-    </ListView>
+        android:text="255.255.255.0"/>
 
     <Button
         android:id="@+id/start"
+        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
