--- a/App/app/src/main/res/layout/dialog_idle.xml
+++ b/App/app/src/main/res/layout/dialog_idle.xml
@@ -11,16 +11,18 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Bitte warte, bis das Spiel startet"
+        android:layout_margin="5dp"
+        android:text="Bitte warte, bis das Spiel startet."
         android:textAlignment="center"
         android:textSize="24sp"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_below="@+id/textView"
+        android:layout_margin="8dp"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
