--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -135,6 +135,17 @@
                         android:textColorLink="@android:color/holo_blue_dark"
                         android:textSize="18sp"/>
 
+                    <Button
+                        android:id="@+id/verlauf"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="Punkteverlauf"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                        android:textColorLink="@android:color/holo_blue_dark"
+                        android:textSize="18sp" />
+
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
