--- a/App/app/src/main/res/layout/activity_highscores.xml
+++ b/App/app/src/main/res/layout/activity_highscores.xml
@@ -6,12 +6,12 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
