Online durch Tutorial ersetzt

--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -85,12 +85,12 @@
                         android:textSize="18sp"/>
 
                     <Button
-                        android:id="@+id/online"
+                        android:id="@+id/tutorial"
                         style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="Online"
+                        android:text="Tutorial"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColorLink="@android:color/holo_blue_dark"
                         android:textSize="18sp"/>
