Tutorial Modus erstellt

--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -95,6 +95,14 @@
                         android:textColorLink="@android:color/holo_blue_dark"
                         android:textSize="18sp"/>
 
+                    <Button
+                        android:id="@+id/storymodus"
+                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Storymodus"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
