--- a/App/app/src/main/res/layout/activity_storymodus.xml
+++ b/App/app/src/main/res/layout/activity_storymodus.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,7 +14,7 @@
 
     <view
         android:id="@+id/view"
-        class="com.example.user.zzzmitview.view.MultiplayerView"
+        class="com.example.user.zzzmitview.view.StoryView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -23,6 +22,6 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minHeight="10dp"/>
+        android:minHeight="10dp" />
 
 </LinearLayout>
