--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -90,18 +90,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="Tutorial"
+                        android:text="Storymode"
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColorLink="@android:color/holo_blue_dark"
                         android:textSize="18sp"/>
-
-                    <Button
-                        android:id="@+id/storymodus"
-                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Storymodus"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
 
                 </LinearLayout>
 
